# dbga

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json
.claude/docs/: design.md
.claude/docs/plans/: 2026-05-27-debug-cli-v1.md
.github/workflows/: ci.yml
docs/superpowers/evals/: RESULTS.md  trigger-queries.json
docs/superpowers/plans/: 2026-05-29-debug-agent-plugin.md
docs/superpowers/specs/: 2026-05-29-debug-agent-plugin-design.md
plugin/: README.md  THIRD_PARTY_NOTICES.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: architect.md  go-expert.md  node-expert.md  python-expert.md
plugin/commands/: setup.md
plugin/references/: agent-teams.md
plugin/skills/_shared/: clean-code.md  dependency-hygiene.md  evidence-first.md
plugin/skills/debug-agent/: SKILL.md
plugin/skills/debug-agent/references/: advanced.md  instrumentation.md
plugin/skills/go/: SKILL.md
plugin/skills/go/evals/: evals.json
plugin/skills/go/references/: concurrency.md  debugging.md  design-patterns.md  errors-structure.md
plugin/skills/node/: SKILL.md
plugin/skills/node/evals/: evals.json
plugin/skills/node/references/: async-patterns.md  debugging.md  design-patterns.md  errors-structure.md  js-fallback.md  typescript-types.md
plugin/skills/python/: SKILL.md
plugin/skills/python/evals/: evals.json
plugin/skills/python/references/: async-concurrency.md  debugging.md  design-patterns.md  errors-structure.md  type-hints.md
skills/debug-agent/: SKILL.md
skills/debug-agent/references/: advanced.md  debugger.md  instrumentation.md  localization.md  log-monitoring.md  vscode-collab.md  workflow.md
skills/debug-py-agent/: SKILL.md
skills/debug-py-agent/references/: advanced.md  debugger.md  instrumentation.md  localization.md  log-monitoring.md  vscode-collab.md  workflow.md
src/debug_agent/: __main__.py  cli.py
src/debug_agent/adapters/: __init__.py  _socket.py  base.py  debugpy_adapter.py  go.py  node.py  python.py
src/debug_agent/commands/: diagnose.py  instrument.py  localize.py  run.py  session.py  sessions.py  watch.py
src/debug_agent/core/: auto_context.py  dap_client.py  dap_session.py  dap_types.py  format.py  instrumentation.py  process.py  session_proc.py  state.py  watch.py
src/debug_cli/: __main__.py  cli.py
src/debug_cli/adapters/: debugpy_adapter.py
src/debug_cli/commands/: diagnose.py  instrument.py  localize.py  run.py  session.py  sessions.py  watch.py
src/debug_cli/core/: auto_context.py  control_proto.py  dap_client.py  dap_session.py  format.py  instrumentation.py  process.py  session_proc.py  state.py  tracebacks.py  watch.py
tests/e2e/: test_cli_diagnose.py  test_cli_error_contract.py  test_cli_instrument.py  test_cli_localize.py  test_cli_run.py  test_cli_session.py  test_cli_session_conditional_start.py  test_cli_session_context_lines.py  test_cli_session_go.py  test_cli_session_named.py  test_cli_session_node.py  test_cli_session_ops.py  test_cli_session_warnings.py  test_cli_sessions_ls.py  test_cli_shared_bps.py  test_cli_watch.py
tests/fixtures/: loop_fixture.py  simple_ok.py  sleep_with_child.py  stepping_fixture.py  zerodiv.py
tests/fixtures/go/: hello.go
tests/fixtures/node/: hello.js
tests/fixtures/tracebacks/: chained.txt  go_fatal_runtime.txt  go_method_panic.txt  go_panic.txt  node_referenceerror.txt  node_typeerror.txt  pytest_short.txt  standard.txt  syntax_error.txt
tests/integration/: test_dap_client.py  test_go_session.py  test_node_session.py  test_session_basic.py  test_session_idle_timeout.py  test_session_listen.py
tests/plugin-sim/: README.md
tests/plugin-sim/go/: buggy.go  go.mod
tests/plugin-sim/node/: buggy.js
tests/plugin-sim/python/: buggy_average.py
tests/unit/: test_adapter_connect_retry.py  test_adapters.py  test_dap_reverse_requests.py  test_format.py  test_go_adapter.py  test_instrumentation.py  test_node_adapter.py  test_process.py  test_session_parsers.py  test_smoke.py  test_state.py  test_tracebacks.py  test_watch.py
