[project]
name = "debug-cli"
version = "0.1.0"
description = "Evidence-first Python debugger CLI for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "debugpy>=1.8",
]

[project.scripts]
debug-cli = "debug_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debug_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/debug_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that spawn debugpy",
    "e2e: tests that exec the CLI",
]
