[project]
name = "debug-cli"
version = "0.1.0"
description = "Evidence-first Python debugger CLI for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nir Adler" }]
keywords = ["debugger", "debugpy", "dap", "cli", "ai-agents", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "debugpy>=1.8",
]

[project.urls]
Homepage = "https://github.com/niradler/debug-cli"
Repository = "https://github.com/niradler/debug-cli"
Issues = "https://github.com/niradler/debug-cli/issues"
Changelog = "https://github.com/niradler/debug-cli/blob/main/CHANGELOG.md"

[project.scripts]
debug-cli = "debug_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/debug_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["src/debug_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that spawn debugpy",
    "e2e: tests that exec the CLI",
]
